@@ -1,4 +1,4 @@
-.TH DISDVI 1 "27 October 2010"
+.TH DISDVI 1 "25 March 2019"
 .SH NAME
 disdvi \- `disassemble' a (p)TeX or XeTeX DVI file
 .SH SYNOPSIS
@@ -13,15 +13,14 @@ disdvi \- `disassemble' a (p)TeX or XeTeX DVI file
 .SH DESCRIPTION
 .I disdvi
 interprets the contents of
-.IR dvi_file
+.I dvi_file
 or
-.IR xdv_file
+.I xdv_file
 printing the DVI commands and text in a human-readable ASCII format on
 the standard output.
 .SH "SEE ALSO"
 .BR dvi2tty (1)
 .SH AUTHOR
-Marcel J.E. Mol, Delft University of Technology, The Netherlands
+Marcel J.E.\& Mol, Delft University of Technology, The Netherlands
 .br
 marcel@mesa.nl, MESA Consulting
-
