@@ -1,3 +1,7 @@
+2019-03-25  Karl Berry  <karl@freefriends.org>
+
+	* gftodvi.man: omit unused second font letter. From Debian.
+
 2019-03-10  Andreas Scherer  <https://ascherer.github.io>
 
 	* ctwill.man: Fix non-macro '\\PB';
